--- a/frontend/joke-app-react/src/components/Footer/FooterStyle.css
+++ b/frontend/joke-app-react/src/components/Footer/FooterStyle.css
@@ -1,9 +1,22 @@
 .footer {
     background-color: #FFFFFF;
-    height: 250px;
+    height: 180px;
     color:#828282;
     text-align: center;
     font-size:15px;
-    padding-left: 50px;
-    margin-right: 50px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.footer-text {
+    font-weight: 500;
+    font-size: 14px;
+    color:#A3A3A3
+
+}
+.coppy-right {
+    font-weight: 600;
+    color: #6D6D6D;
+
 }
