--- a/frontend/joke-app-react/src/components/Footer/FooterStyle.css
+++ b/frontend/joke-app-react/src/components/Footer/FooterStyle.css
@@ -7,16 +7,20 @@
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-
+    padding-left: 130px;
+    padding-right: 130px;
+    
 }
 .footer-text {
     font-weight: 500;
     font-size: 14px;
-    color:#A3A3A3
-
+    color:#A3A3A3;
+    line-height:24px;
+   
 }
 .coppy-right {
     font-weight: 600;
     color: #6D6D6D;
 
 }
+
